application and layout begining

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "Desenrolando",
   "version": "0.0.0",
+  "homepage": "https://github.com/bolobr/Desenrolando",
   "authors": [
     "Guilherme Cordeiro <guilherme.cscordeiro@gmail.com>"
   ],
